(Stuart Lewis)
 - [2057231] Refactor LDAPServlet to use Stackable Authentication
 - Enable ldap.login.specialgroup special group for all LDAP users

(Stuart Lewis / Chris Yates / Flavio Botelho / Alex Barbieri / Reuben Pasquini)
 - [2057378] Hierarchical LDAP support

(Yin Latt)
 - SF bug [1931796] DSpace 1.5 Controlled Vocab (edit-metadata.jsp) not working on first box in twobox
 

1.5.1 final
===========

(Scott Philips)
- (Scott Phillips) Fixed bug where users could not finish registering nor reset 
  their password because the authentication method signatures were changed.
- Jay Paz (SF#1898241) Additional fixes to patch to enable reuse of methods.
- Added the ability to manage sessions with site wide alerts to prevent users from authenticating.
- Fixes a bug where the ability to edit an item durring workflow step 2 is not displayed.
- Jay Paz (SF#1898241) Add item Export from jspui and xmlui.
- Added easy support for google analytics statistics
- Added the ability for super admins to login as other users. 
- Added an activity viewer to the Control Panel

(Mark Diggory) 
- Fix for SF Bug #2082236 Subscription notification (sub-daily) no emails sent
- [2102580] William Hays: Duplicate Handle exception when replacing bitstreams
- [2102617] Sands Fish: X509Authentication fails to assign appropriate specialgroups
- (Sands Fish) Add "Select Primary Bitstream" functionality to submission workflow
- Guard against Community/Collection metadata having only whitespace characters 
  and eliminate cases where null pointer exceptions would be thrown
- Improve DSIndexer logic in both branches to support removal of items from index 
  when withdrawn from repository.
- (Sands Fish) Provides fix for AuthenticationUtil where users ID's are not properly compared.
- Fix NullPointerException cause by nullified Context object in LNI map item to new collection.
- Block Basic Authentication &quot;details&quot; from being exposed in dspace logs.